[gd_scene load_steps=10 format=3 uid="uid://y2xmms3uqlf5"]

[ext_resource type="Script" path="res://scripts/astral_portal.gd" id="1_ce067"]

[sub_resource type="Curve" id="Curve_s2dhu"]
min_value = -1.0
_data = [Vector2(0.0148368, 0.711785), 0.0, 0.547716, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_d8fh7"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.905045, 1), 0.0, 0.0, 0, 0, Vector2(0.997033, 0.00641787), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_wov6h"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.863501, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_p0tog"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.857567, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_wifn2"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.857567, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_2gw24"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.863501, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_vly3a"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.863501, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CircleShape2D" id="CircleShape2D_fqp1x"]
radius = 32.0624

[node name="Astral_portal" type="Node2D"]
script = ExtResource("1_ce067")

[node name="Ring1" type="CPUParticles2D" parent="."]
amount = 200
lifetime = 3.0
randomness = 0.13
lifetime_randomness = 0.05
emission_shape = 2
emission_sphere_radius = 90.0
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
orbit_velocity_min = 0.05
orbit_velocity_max = 0.25
orbit_velocity_curve = SubResource("Curve_s2dhu")
radial_accel_min = -1.0
radial_accel_max = -1.0
angle_min = 720.0
angle_max = 720.0
scale_amount_min = 2.0
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_d8fh7")
color = Color(0.701961, 0.227451, 1, 1)

[node name="Ring2" type="CPUParticles2D" parent="."]
amount = 175
lifetime = 3.0
randomness = 0.13
lifetime_randomness = 0.05
emission_shape = 2
emission_sphere_radius = 77.0
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
orbit_velocity_min = 0.15
orbit_velocity_max = 0.35
orbit_velocity_curve = SubResource("Curve_s2dhu")
radial_accel_min = -1.0
radial_accel_max = -1.0
angle_min = 720.0
angle_max = 720.0
scale_amount_min = 3.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_wov6h")
color = Color(0.980392, 0.227451, 1, 1)

[node name="Ring3" type="CPUParticles2D" parent="."]
amount = 150
lifetime = 3.0
randomness = 0.13
lifetime_randomness = 0.05
emission_shape = 1
emission_sphere_radius = 61.0
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
orbit_velocity_min = 0.25
orbit_velocity_max = 0.45
orbit_velocity_curve = SubResource("Curve_s2dhu")
radial_accel_min = -1.0
radial_accel_max = -1.0
angle_min = 720.0
angle_max = 720.0
scale_amount_min = 4.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_p0tog")
color = Color(1, 0.227451, 0.666667, 1)

[node name="Ring4" type="CPUParticles2D" parent="."]
amount = 100
lifetime = 3.0
randomness = 0.13
lifetime_randomness = 0.05
emission_shape = 1
emission_sphere_radius = 55.0
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
orbit_velocity_min = 0.45
orbit_velocity_max = 0.55
orbit_velocity_curve = SubResource("Curve_s2dhu")
radial_accel_min = -1.0
radial_accel_max = -1.0
angle_min = 720.0
angle_max = 720.0
scale_amount_min = 5.0
scale_amount_max = 6.0
scale_amount_curve = SubResource("Curve_wifn2")
color = Color(1, 0.266667, 0.227451, 1)

[node name="Ring5" type="CPUParticles2D" parent="."]
amount = 70
lifetime = 3.0
randomness = 0.13
lifetime_randomness = 0.05
emission_shape = 1
emission_sphere_radius = 33.0
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
orbit_velocity_min = 0.85
orbit_velocity_max = 0.95
orbit_velocity_curve = SubResource("Curve_s2dhu")
radial_accel_min = -1.0
radial_accel_max = -1.0
angle_min = 720.0
angle_max = 720.0
scale_amount_min = 7.0
scale_amount_max = 8.0
scale_amount_curve = SubResource("Curve_2gw24")
color = Color(1, 0.439216, 0.227451, 1)

[node name="Ring6" type="CPUParticles2D" parent="."]
amount = 10
lifetime = 3.0
randomness = 0.13
lifetime_randomness = 0.05
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
orbit_velocity_min = 2.0
orbit_velocity_max = 3.0
orbit_velocity_curve = SubResource("Curve_s2dhu")
radial_accel_min = -1.0
radial_accel_max = -1.0
angle_min = 720.0
angle_max = 720.0
scale_amount_min = 8.0
scale_amount_max = 9.0
scale_amount_curve = SubResource("Curve_vly3a")
color = Color(1, 0.815686, 0.227451, 1)

[node name="killTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_fqp1x")

[node name="SummonTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="timeout" from="killTimer" to="." method="_on_kill_timer_timeout"]
[connection signal="timeout" from="SummonTimer" to="." method="_on_summon_timer_timeout"]
